# MEA-PROJECT

./: .dockerignore  .env  .env-example  .gitignore  Dockerfile  README.md  branch purpose  compose-prod.yaml  compose.yaml  entrypoint.sh  requirements.txt
.github/workflows/: aws.yml  deploy.yml
app/: .pre-commit-config.yaml  Dockerfile  Makefile  cli.py  entrypoint.sh  initializer.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_main.py  urls.py
app/auth/: authentication.py
app/config/: __init__.py  cfg.py  db.py
app/controllers/: admin.py  orders.py  pizza.py  user.py
app/exceptions/: handlers.py
app/internal/: admin.py
app/models/: orders.py  pizza.py  users.py
app/models/pydantic/: customer.py  serializers.py
app/routers/: __init__.py  router.py
app/utils/: validators.py
frontEnd/: angular.json  package-lock.json  package.json  tailwind.config.js
frontEnd/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
frontEnd/src/app/core/: admin.service.ts  cart.service.ts  core.module.ts  order-item.service.ts  pizza.service.ts  users.service.ts
frontEnd/src/app/core/guards/: auth.guard.ts
frontEnd/src/app/core/interceptors/: auth.interceptor.ts
frontEnd/src/app/features/admin/: admin-routing.module.ts  admin.module.ts
frontEnd/src/app/features/auth/: login-routing.module.ts  (+1 more)
frontEnd/src/app/layout/: layout.component.ts
frontEnd/src/app/models/: auth.model.ts  cart.model.ts  orders.model.ts  pizza.model.ts  users.model.ts
frontEnd/src/app/shared/: shared.module.ts
(+31 files in other folders)
