[project]
name = "pizza-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "betterconf>=4.5.0",
    "fastadmin[fastapi,tortoise-orm]>=0.2.22",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "ruff>=0.11.12",
    "tortoise-orm>=0.25.0",
]
